# pixeler4pc

./: LICENSE  README.md
app/: .clang-format  CMakeLists.txt
app/src/: main.cpp
app/src/context/: WidgetCreator.cpp  WidgetCreator.h
app/src/context/3d/: GameWorld.cpp  GameWorld.h  Player.cpp  Player.h  ThreeDContext.cpp  ThreeDContext.h  readme.txt
app/src/context/3d/texture/: texture_blue_block.h  texture_brick.h  texture_stone.h  texture_tree.h  textures_params.h
app/src/context/files/: FilesContext.cpp  FilesContext.h
app/src/context/files/res/: folder.h  lua.h
app/src/context/games/: GameListContext.cpp  GameListContext.h
app/src/context/games/chess/: ChessContext.cpp  ChessContext.h
app/src/context/games/icons/: chess_ico.h  sokoban_ico.h
app/src/context/games/rpg/: ResID.h  RpgContext.cpp  RpgContext.h  SceneID.h
app/src/context/games/sokoban/: ResID.h  SceneID.h  SokobanContext.cpp  SokobanContext.h
app/src/context/home/: HomeContext.cpp  HomeContext.h
app/src/context/menu/: MenuContext.cpp  MenuContext.h
app/src/context/menu/res/: book.h  calc.h  chip.h  headphones.h  joystick.h  lua_ico.h  sd.h  settings.h  wifi_ico.h
app/src/context/resources/: ch32_pins_def.h  colors.h  kb_btn_id.h  strings.h  ui_const.h
app/src/context/resources/ico/: battery.h
app/src/pixeler/: defines.h
app/src/pixeler/String/: stdlib_noniso.c  stdlib_noniso.h
app/src/pixeler/doc/: Makefile  README.md
app/src/pixeler/doc/source/: about.md  conf.py  context.md  display.md  engine.md  gui.md  index.md  input.md  lua.md  sd.md  setup.md  start.md
app/src/pixeler/driver/graphics/: DisplayWrapper.h  graphics_setup.h
app/src/pixeler/driver/input/: Button.cpp  Button.h  Input.cpp  Input.h
app/src/pixeler/game/: DataStream.h  IGameMenu.h  IGameNotification.h  IGameScene.cpp  IGameScene.h  IGameUI.h
app/src/pixeler/game/object/: IGameObject.h  SpriteDescription.h
app/src/pixeler/game/terrain/: TerrainLoader.cpp  TerrainLoader.h  TerrainManager.cpp  TerrainManager.h  tile_type_extractor.py
app/src/pixeler/lib/lua/: lua.h
app/src/pixeler/lib/qr/: QR_Gen.cpp  QR_Gen.h  bitstream.cpp  bitstream.h  mask.cpp  mask.h  mmask.cpp  mmask.h  mqrspec.cpp  mqrspec.h  qrencode.cpp  qrencode.h  qrencode_inner.h  qrinput.cpp  qrinput.h  qrspec.cpp  qrspec.h  rsecc.cpp  rsecc.h  split.cpp  split.h
app/src/pixeler/manager/: ContextManager.cpp  ContextManager.h  FileManager.cpp  FileManager.h  ResManager.cpp  ResManager.h  SettingsManager.cpp  SettingsManager.h
app/src/pixeler/plugin/: stub
app/src/pixeler/plugin/lua/: Readme.txt  lua.h
app/src/pixeler/setup/: README.txt  context_id_setup.hpp  cpu_setup.hpp  graphics_setup.hpp  input_setup.h  sd_setup.hpp  ui_setup.h  ui_setup.hpp
app/src/pixeler/src/: Pixeler.cpp  Pixeler.h  defines.h
app/src/pixeler/src/String/: WString.cpp  WString.h
app/src/pixeler/src/context/: IContext.cpp  IContext.h
app/src/pixeler/src/game/: DataStream.cpp  DataStream.h  IGameMenu.h  IGameNotification.h  IGameObject.cpp  IGameObject.h  IGameScene.cpp  IGameScene.h  IGameUI.h  (+1 more)
(+520 files in other folders)
